  \subsection{Significant User-Visible Changes}{
    \itemize{
      \item .
    }
  }
  \subsection{Deprecated and Defunct}{
    \itemize{
      \item .
    }
  }
  \subsection{Bug Fixes}{
    \itemize{
      \item Expression for \eqn{\text{d}Y/\text{d}\tau}{dY/dtau} used by
      \code{sir.aoi} was wrong.
    }
  }
  \subsection{New Features}{
    \itemize{
      \item .
    }
  }
  \subsection{Installation}{
    \itemize{
      \item .
    }
  }
  \subsection{Documentation}{
    \itemize{
      \item .
    }
  }
  \subsection{Internals}{
    \itemize{
      \item .
    }
  }
}

\section{Changes in version 0.4.0 (2025-04-28)}{
  \subsection{Deprecated and Defunct}{
    \itemize{
      \item \code{seir.canonical} is removed in favour of more general
      \code{sir.aoi}.  The method for \code{summary} for class
      \code{seir.canonical} is removed in favour of a method for class
      \code{sir.aoi}.
    }
  }
  \subsection{New Features}{
    \itemize{
      \item Function \code{sir.aoi} generalizing \code{seir.canonical}
      in order to support rates of transmission and recovery structured
      by age of infection.
    }
  }
}

\section{Changes in version 0.3.2 (2025-03-23)}{
  \subsection{New Features}{
    \itemize{
      \item Function \code{seir.canonical} providing a nondimensional
      interface to a special case (constant transmission, without vital
      dynamics, without loss of immunity) of \code{seir} usage.  The
      nondimensional parameters are the basic reproduction number and
      the ratio of the mean latent period and mean generation interval.

      \item A method for \code{summary} approximating the tail exponents
      of prevalence from the return value of \code{seir.canonical}.
    }
  }
}

\section{Changes in version 0.3.1 (2024-11-22)}{
  \subsection{Significant User-Visible Changes}{
    \itemize{
      \item Formal argument \code{init} of \code{fastbeta},
      \code{fastbeta.bootstrap}, \code{ptpi}, and \code{seir} is